# framework.uifw.voice.stt

./: CMakeLists.txt  changelog  stt-server.manifest  stt-server.rule
client/: CMakeLists.txt  stt.c  stt.h  stt_client.c  stt_client.h  stt_dbus.c  stt_dbus.h  stt_file.c  stt_main.h  stt_setting.c  stt_setting.h  stt_setting_dbus.c  stt_setting_dbus.h
common/: stt_config_mgr.c  stt_config_parser.c  stt_defs.h
include/: CMakeLists.txt
packaging/: stt.spec
server/: sttd_client_data.c  sttd_client_data.h  sttd_config.c  sttd_config.h  sttd_dbus.c  sttd_dbus.h  sttd_dbus_server.c  sttd_dbus_server.h  sttd_engine_agent.c  sttd_engine_agent.h  sttd_main.c  sttd_main.h  sttd_network.c  sttd_network.h  sttd_recorder.c  sttd_recorder.h  sttd_server.c  sttd_server.h  sttp.h
test/: CMakeLists.txt  test_main.c
